# tasman-marketing-agent-demo

./: .env.example  .gitignore  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  VERSION_0.1_STATE.md  main.py  pyproject.toml
.github/: COMMIT_INSTRUCTIONS.md  COMMIT_MESSAGE.txt  COMMIT_STYLE_GUIDE.md
agents/: __init__.py  agent_driver.py  agent_hypothesis.py  agent_search.py  agent_segmentation.py  agent_text_to_sql.py  agent_triage.py  base_analysis_agent.py
claude-prompts/: demo-build.md  instructions-compass-demo.md  instructions-phase1.md  instructions-phase2.md
config/: analysis.yaml  business_context.yaml  db.yaml  prompt_templates.yaml  schema.json  semantic.yml  sql_templates.yaml
core/: __init__.py  analysis_utils.py  duckdb_connector.py  llm_clients.py  local_text_to_sql.py  triage_local.py  viz.py
demo/: 01_bad_oneshot_raw.ipynb  02_good_modular_dspy.ipynb  DEMO_DIAGRAM.md  ENHANCEMENTS.md  README.md  bad_notebook_vague_example.md  database_erd.md  generate_erd.py  good_notebook_enhancements.md
demo/utils/: __init__.py  agents.py  db_connector.py  env_loader.py  (+5 more)
docs/: PHASE2_ARCHITECTURE_PLAN.md  TECHNICAL_SPEC_v0.1.0.md  TECHNICAL_SPEC_v0.2.0.md  architecture_diagram.py
notebooks/: Agentic_5min_Demo.ipynb  Agentic_Analytics_Demo.ipynb
scripts/: create_sample_data.py  generate_synthetic_data.py
tests/: __init__.py  test_agent_search.py  test_analysis_utils.py  test_base_analysis_agent.py  test_driver_agent.py  test_duckdb_connector.py  test_hypothesis_agent.py  test_local_text_to_sql.py  test_segmentation_agent.py  test_triage_local.py
(+1 files in other folders)
