[project]
name = "tasman-marketing-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "duckdb>=1.4.1",
    "ipykernel>=7.1.0",
    "jsonschema>=4.25.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]
